Simplify NumberedBuildScan
It no longer needs to parse and interpret the Build Scan URL.